# Charlie-llm-actor-CC3-

./: .env.example  .gitignore  README.md  pyproject.toml  run.command  setup.bat  setup.command
BASIC_PROJECT/: boot.py  settings.ini  settings_loader.py
runtime/: config.json  dialogue.txt
src/app/: config.py  filters.py  pipeline_google.py  pipeline_groq.py  pipeline_ollama.py
src/llm_actor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/services/: llm.py  osc.py
tests/: test_osc_log.txt  verify_app_imports.py  verify_osc_import.py
